article and profile card added

--- a/index.html
+++ b/index.html
@@ -7,10 +7,91 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card</title>
     <link rel="stylesheet" href="./main.css">
+    <!-- fontawesome kit  -->
+    <script src="https://kit.fontawesome.com/761124564d.js" crossorigin="anonymous"></script>
+    <!-- fontawesome cdn  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-
+    <section class="content-area">
+        <h1>Article News Card</h1>
+        <p>Made with <i class="fa-solid fa-heart"></i> by <span>Md Tanvir Hasan</span> | Designed by <span>Misbahur
+                Rahman</span></p>
+        <div class="card-area">
+            <div class="card-body">
+                <div class="card-banner">
+                    <img src="./images/city-1.jpg" alt="">
+                    <a class="link-button" href="">Photos</a>
+                    <div class="date">
+                        <p>23 <br> July</p>
+                    </div>
+                </div>
+                <div class="card-details">
+                    <h2>City Lights in New York</h2>
+                    <h4>The city that never sleeps.</h4>
+                    <p>New York, the largest city in the U.S, is an architectural marvel with plenty of historic
+                        monuments,
+                        magnificent buildings and countless dazzling skyscrapers.</p>
+                    <p><i class="fa-regular fa-clock"></i> 6 mins ago</p>
+                    <p><i class="fa-solid fa-comments"></i> 39 comments</p>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="card-banner">
+                    <img src="./images/city-1.jpg" alt="">
+                    <a class="link-button" href="">Photos</a>
+                    <div class="date">
+                        <p>23 <br> July</p>
+                    </div>
+                </div>
+                <div class="card-details">
+                    <h2>City Lights in New York</h2>
+                    <h4>The city that never sleeps.</h4>
+                    <p>New York, the largest city in the U.S, is an architectural marvel with plenty of historic
+                        monuments,
+                        magnificent buildings and countless dazzling skyscrapers.</p>
+                    <p><i class="fa-regular fa-clock"></i> 6 mins ago</p>
+                    <p><i class="fa-solid fa-comments"></i> 39 comments</p>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="card-banner">
+                    <img src="./images/city-1.jpg" alt="">
+                    <a class="link-button" href="">Photos</a>
+                    <div class="date">
+                        <p>23 <br> July</p>
+                    </div>
+                </div>
+                <div class="card-details">
+                    <h2>City Lights in New York</h2>
+                    <h4>The city that never sleeps.</h4>
+                    <p>New York, the largest city in the U.S, is an architectural marvel with plenty of historic
+                        monuments,
+                        magnificent buildings and countless dazzling skyscrapers.</p>
+                    <p><i class="fa-regular fa-clock"></i> 6 mins ago</p>
+                    <p><i class="fa-solid fa-comments"></i> 39 comments</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="profile-area">
+        <div class="profile-card">
+            <div class="profile-card-body">
+                <img src="./images/avatar2.png" alt="">
+                <h3>Jasmine Carter</h3>
+                <p>Web Designer</p>
+                <div class="social-icon">
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
