two section added

--- a/index.html
+++ b/index.html
@@ -90,6 +90,28 @@
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 </div>
             </div>
+            <div class="profile-card-body">
+                <img src="./images/DSC_0174 (1) (1).jpg" alt="">
+                <h3>Md Tanvir Hasan</h3>
+                <p>Web Developer</p>
+                <div class="social-icon">
+                    <a href="https://www.instagram.com/tanvirbinsiraj/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://github.com/hasanmdtanvir"><i class="fa-brands fa-github"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                </div>
+            </div>
+            <div class="profile-card-body">
+                <img src="./images/avatar3.png" alt="">
+                <h3>Andrew Neil</h3>
+                <p>UI Designer</p>
+                <div class="social-icon">
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                </div>
+            </div>
         </div>
     </section>
 </body>
