--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <section class="content-area">
         <h1>Article News Card</h1>
-        <p>Made with <i class="fa-solid fa-heart"></i> by <span>Md Tanvir Hasan</span> | Designed by <span>Misbahur
+        <p class="second-title">Made with <i class="fa-solid fa-heart"></i> by <span>Md Tanvir Hasan</span> | Designed by <span>Misbahur
                 Rahman</span></p>
         <div class="card-area">
             <div class="card-body">
@@ -111,6 +111,31 @@
                     <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="shoe">
+        <div class="shoe-area">
+            <div class="left-segment">
+                <img src="./images/download.jpg" alt="">
+                <div class="size">
+                    <h3>Choose Size</h3>
+                    <span>5</span>
+                    <span>6</span>
+                    <span>7</span>
+                    <span>8</span>
+                    <span>9</span>
+                    <span>10</span>
+                    <span>11</span>
+                    <span>12</span>
+                </div>
+            </div><div class="right-segment">
+                <h3>Women's Running Shoe</h3>
+                <h1>Nike Epic React Flyknit</h1>
+                <h1 class="price">$150</h1>
+                <p>The Nike Epic React Flyknit foam cushioning is responsive yet light-weight, durable yet soft. This creates a sensation that not only enhances the feeling of moving forward, but makes running feel fun, too.</p>
+                <button>Add To Cart <i class="fa-solid fa-cart-shopping"></i></button> 
+                
             </div>
         </div>
     </section>
