--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     <p><i class="fa-regular fa-clock"></i> 6 mins ago</p>
                     <p><i class="fa-solid fa-comments"></i> 39 comments</p>
                 </div>
-            </div>
-            <div class="card-body">
+            </div><!-- 
+             --><div class="card-body">
                 <div class="card-banner">
                     <img src="./images/city-1.jpg" alt="">
                     <a class="link-button" href="">Photos</a>
@@ -56,8 +56,8 @@
                     <p><i class="fa-regular fa-clock"></i> 6 mins ago</p>
                     <p><i class="fa-solid fa-comments"></i> 39 comments</p>
                 </div>
-            </div>
-            <div class="card-body">
+            </div><!--
+            --><div class="card-body">
                 <div class="card-banner">
                     <img src="./images/city-1.jpg" alt="">
                     <a class="link-button" href="">Photos</a>
@@ -89,8 +89,8 @@
                     <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 </div>
-            </div>
-            <div class="profile-card-body">
+            </div><!-- 
+             --><div class="profile-card-body">
                 <img src="./images/DSC_0174 (1) (1).jpg" alt="">
                 <h3>Md Tanvir Hasan</h3>
                 <p>Web Developer</p>
@@ -100,8 +100,8 @@
                     <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 </div>
-            </div>
-            <div class="profile-card-body">
+            </div><!-- 
+             --><div class="profile-card-body">
                 <img src="./images/avatar3.png" alt="">
                 <h3>Andrew Neil</h3>
                 <p>UI Designer</p>
@@ -129,7 +129,7 @@
                     <span>11</span>
                     <span>12</span>
                 </div>
-            </div><div class="right-segment">
+            </div><!--  --><div class="right-segment">
                 <h3>Women's Running Shoe</h3>
                 <h1>Nike Epic React Flyknit</h1>
                 <h1 class="price">$150</h1>
